--- a/src/scss/theme/_colors.scss
+++ b/src/scss/theme/_colors.scss
@@ -35,8 +35,8 @@ $purple: #6b5eae !default;
 $pink: #ff679b !default;
 $red: #e63757 !default;
 $orange: #E3A476 !default;
-$yellow: #FFDA91 !default;
-$green: #124838 !default;
+$yellow: yellow !default;
+$green: #124838 !default; 
 $teal: #02a8b5 !default;
 $cyan: #27bcfd !default;
 
